refine screen sharing

--- a/app/src/main/res/layout/activity_screen_sharing.xml
+++ b/app/src/main/res/layout/activity_screen_sharing.xml
@@ -1,41 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:paddingHorizontal="20dp"
-    android:paddingVertical="40dp"
+    android:padding="24dp"
     tools:context=".presentation.ui.ScreenSharingActivity">
 
-    <!-- Title -->
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="80dp"
         android:text="Share Screen"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="100dp" />
+        android:textColor="#000000"
+        android:textSize="22sp"
+        android:textStyle="bold" />
 
-    <!-- Sharing status -->
-    <TextView
-        android:id="@+id/tvSharingStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="You’re sharing your screen"
-        android:textSize="16sp"
-        android:layout_marginBottom="24dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center">
 
-    <!-- Stop Sharing Button -->
+        <TextView
+            android:id="@+id/tvSharingStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:text="You’re sharing your screen"
+            android:textColor="#444444"
+            android:textSize="16sp" />
+    </LinearLayout>
+
     <Button
         android:id="@+id/btnStopSharing"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded_button_blue"
+        android:padding="14dp"
         android:text="Stop sharing"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp" />
+        android:textColor="@android:color/white" />
 
 </LinearLayout>
