--- a/app/src/main/res/layout/activity_screen_sharing.xml
+++ b/app/src/main/res/layout/activity_screen_sharing.xml
@@ -8,7 +8,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="24dp"
-    tools:context=".presentation.ui.ScreenSharingActivity">
+    tools:context=".presentation.activity.ScreenSharingActivity">
 
     <TextView
         android:id="@+id/tvTitle"
